<resources>
    <string name="app_name">MangaRead</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_txt_registration">Регистрация</string>
    <string name="btn_txt_login">Войти</string>
    <string name="txt_main">Главная</string>
    <string name="txt_profile">Профиль</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="nickname">Nickname</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Вход</string>
    <string name="dont_have_an_account">У вас еще нет аккаунта ?</string>
    <string name="have_an_account">У вас уже есть аккаунт ?</string>
    <string name="add_image">Добавить фото</string>
    <string name="placeholder">Placeholder</string>
    <string name="all_manga">Вся манга</string>
    <string name="top_100">Топ 100</string>
    <string name="my_profile">Мой профиль</string>
    <string name="logout">Выйти</string>
    <string name="your_password">Ваш пароль</string>
    <string name="your_email">Ваш логин</string>
    <string name="your_name">Ваше имя</string>
    <string name="change_photo">Изменить фото</string>
    <string name="save">Сохранить</string>
    <string name="year">Год:</string>
    <string name="genre">Жанр:</string>
    <string name="type">Тип:</string>
    <string name="information">Информация</string>
    <string name="read_more">Читать далее</string>


    <string name="test_text">Android Inc. была основана в Пало-Альто, штат Калифорния, в октябре 2003 года Энди Рубином (основатель), Ричем Майнером (со-основатель), Ником Сирсом и Крисом Уайтом. Рубин описал проект Android как обладающий «огромным потенциалом в разработке более умных мобильных устройств, которые лучше осведомлены о местонахождении и предпочтениях своего владельца». Первоначальные намерения компании заключались в разработке передовой операционной системы для цифровых камер, и это было основой ее предложения инвесторам в апреле 2004 года. Затем компания решила, что рынок камер недостаточно велик для достижения ее целей, и пять месяцев спустя она отвлекла свои усилия и представила Android как операционную систему для мобильных телефонов, которая будет конкурировать с Symbian и Microsoft Windows Mobile.</string>
    <string name="comments">Отзывы</string>
    <string name="add_comment">Добавить</string>
    <string name="synopsis">Синопсис</string>
    <string name="hide">Скрыть</string>
    <string name="add_avatar">Добавьте фото</string>
    <string name="invalid_password">Не верный пароль</string>
    <string name="invalid_password1">Пароль должен быть не менее 8 символов</string>
    <string name="invalid_nickname">Никнейм пользователя должен быть не менее 10 символов</string>
    <string name="invalid_username">Имя пользователя должно быть не менее 10 символов</string>
    <string name="no_reviews">Отзывов нет :(</string>
    <string name="default_user_name">Имя Фамилия</string>
    <string name="successful_logout">successful logout</string>
    <string name="reset">Сбросить</string>
    <string name="apply">Применить</string>
    <string name="before">До 2022</string>
    <string name="from">От 0</string>
    <string name="tv_year">Год</string>
    <string name="tv_type">Тип</string>
    <string name="all">все</string>
    <string name="genres">Жанры</string>
    <string name="filters">Фильтры</string>
    <string name="min_length">Min length 4</string>

    <string-array name="types">
        <item>Манга</item>
        <item>Манхва</item>
        <item>Маньхуа</item>
        <item>Западный комикс</item>
        <item>Рукомикс</item>
    </string-array>
</resources>