<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/filters"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_text_18" />

            <ImageButton
                android:id="@+id/btn_dismiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/dimen_margin_16"
                android:backgroundTint="@android:color/transparent"
                android:padding="12dp"
                android:src="@drawable/ic_close"
                tools:ignore="ContentDescription" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:background="@color/dark_gray"
                android:backgroundTint="@color/dark_gray" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/show_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_margin_16"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/genres"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_text_18" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_open"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="52dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/all"
                android:textSize="@dimen/dimen_text_18" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_margin_16"
            android:layout_marginTop="@dimen/dimen_margin_16"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/tv_type"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_text_18" />

            <ListView
                android:id="@+id/lv_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_margin_16"
                android:divider="@null"
                android:dividerHeight="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_margin_16"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/tv_year"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_text_18" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_from"
                    android:layout_width="116dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_et_filter_l"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/from"
                    android:inputType="number"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:textSize="@dimen/dimen_text_16"
                    tools:ignore="Autofill" />

                <View
                    android:layout_width="12dp"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="4dp"
                    android:background="@color/black" />

                <EditText
                    android:id="@+id/et_to"
                    android:layout_width="116dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_et_filter_l"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/before"
                    android:inputType="number"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:textSize="@dimen/dimen_text_16"
                    tools:ignore="Autofill" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reset"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/montserrat_regular"
                android:paddingHorizontal="0dp"
                android:text="@string/reset"
                android:textColor="@color/purple"
                android:textSize="@dimen/dimen_text_14"
                app:strokeColor="@color/purple"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_apply"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_margin_12"
                android:fontFamily="@font/montserrat_regular"
                android:paddingHorizontal="0dp"
                android:text="@string/apply"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_text_14" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>